--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,9 +13,12 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_bloc: ^9.1.1
+  flutter_staggered_grid_view: ^0.7.0
   freezed: ^3.2.3
   freezed_annotation: ^3.1.0
   get_it: ^9.0.5
+  go_router: ^17.0.0
+  shared_preferences: ^2.5.3
 
 dev_dependencies:
   flutter_test:
