--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   flutter_staggered_grid_view: ^0.7.0
   freezed: ^3.2.3
   freezed_annotation: ^3.1.0
+  gap: ^3.0.1
   get_it: ^9.0.5
   go_router: ^17.0.0
   shared_preferences: ^2.5.3
