--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -1,1 +1,14 @@
 include: package:flutter_lints/flutter.yaml
+
+analyzer:
+  errors:
+    dead_code: ignore
+    invalid_annotation_target: ignore
+    use_build_context_synchronously: ignore
+
+linter:
+  rules:
+    - prefer_final_fields
+    - prefer_final_locals
+    - prefer_final_in_for_each
+    - prefer_relative_imports
