--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,7 +22,7 @@ dependencies:
   get_it: ^9.0.5
   go_router: ^17.0.0
   shared_preferences: ^2.5.3
-  timeago: ^3.7.1
+  sliver_tools: ^0.2.12
 
 dev_dependencies:
   flutter_test:
