--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,7 +22,6 @@ dependencies:
   get_it: ^9.0.5
   go_router: ^17.0.0
   shared_preferences: ^2.5.3
-  sliver_tools: ^0.2.12
 
 dev_dependencies:
   flutter_test:
@@ -36,6 +35,7 @@ flutter:
   assets:
     - .env
     - assets/character/
+    - assets/icons/
   fonts:
     - family: Itim
       fonts:
