--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   freezed_annotation: ^3.1.0
   gap: ^3.0.1
   get_it: ^9.0.5
+  gif_view: ^1.0.3
   go_router: ^17.0.0
   shared_preferences: ^2.5.3
 
